<resources>
    <string name="app_name">IceBreakrr</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">579784939748-6e63a67fhpe0r74ik3qapu6kd4hm04r9.apps.googleusercontent.com</string>

    <string name="around_you">Around You</string>
    <string name="already_met">Already Met</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="No_Internet_Toast">No internet connection available</string>
    <string name="map">Map</string>
    <string name="location_loading">Map Loading...</string>
    <string name="Not_Implemented_Toast">Not yet implemented</string>

    <string name="your_location_title">Your Location</string>
...
