...

  var heatmapProvider by remember { mutableStateOf<HeatmapTileProvider?>(null) }
  var isMapLoaded by remember { mutableStateOf(false) }
  var lastCameraPosition by remember { mutableStateOf<LatLng?>(null) }

  Scaffold(
      modifier = Modifier.testTag("heatMapScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.HEAT_MAP) {
                navigationActions.navigateTo(route)
              }
...
