...
                Text("Yes")
              }
        },
        dismissButton = { TextButton(onClick = { alertDialogSent = false }) { Text("No") } })
  }
  Scaffold(
      modifier = Modifier.testTag("notificationScreen"),
      topBar = { TopBar(stringResource(R.string.notifications_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.NOTIFICATIONS) {
                navigationActions.navigateTo(route)
...
