...
  val isTesting = LocalIsTesting.current
  val myProfile = profilesViewModel.selfProfile.collectAsState()

  val screenHeight = LocalConfiguration.current.screenHeightDp.dp

  Scaffold(
      modifier = Modifier.testTag("settingsScreen").fillMaxSize(),
      topBar = { TopBar(stringResource(R.string.settings_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.SETTINGS) {
                navigationActions.navigateTo(route)
...
